Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
5.15.2, 5.15.3
-
Qt 5.15.3 / Samsung Galaxy S10e 10.0, Samsung Galaxy TabS2 7.0
-
-
872440dc0 (tqtc/lts-5.15), 4b4873359 (dev), d0f13e420 (6.5), 63d4a4ef9 (tqtc/lts-6.2)
-
2022wk02FOAndroid&Automotive, 2022wk04FOAndroid&Automotive, 2022wk06FOAndroid&Automotive, 2022wk08FOAndroid&Automotive, 2022wk10FOAndroid&Automotive, 2022wk12FOAndroid&Automotive, 2022wk14FOAndroid&Automotive
Description
Steps to reproduce:
1. Run context info example project (examples/opengl/contextinfo) on Android
2. Select 'Open GL' in 'Renderable type' box.
3. Tap on 'Create context'
Actual: Application crashes with the following output:
2021-03-05 13:42:02.313 19728-27828/org.qtproject.example.contextinfo A/libcontextinfo_armeabi-v7a.so: EGL Error : Could not create the egl surface: error = 0x3000 2021-03-05 13:42:02.313 19728-27828/org.qtproject.example.contextinfo A/libc: Fatal signal 6 (SIGABRT), code -1 (SI_QUEUE) in tid 27828 (qtMainLoopThrea), pid 19728 (ple.contextinfo)
Expected: App should not crash.
Attachments
Issue Links
- relates to
-
QTBUG-90578 Native OpenGL crashes on Android
-
- Closed
-